lib/tests/fixtures/compiler/evaluation/func_stack_too_deep.pp
function foo($counter) {
    if $counter == 0 {
        fail done
    }
    foo($counter - 1)
}

foo(10000)
